--- a/labs/lab-python-lambda-map-reduce-filter.ipynb
+++ b/labs/lab-python-lambda-map-reduce-filter.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 99,
    "id": "69e24c3b-385e-44d6-a8ed-705a3f58e696",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 100,
    "id": "0906a9b0-d567-4786-96f2-5755611b885e",
    "metadata": {},
    "outputs": [
@@ -256,8 +256,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1040.4, 2040.2, 530.45]\n",
-      "[{'balance': 1040.4, 'interest_rate': 0.02}, {'balance': 2040.2, 'interest_rate': 0.01}, {'balance': 530.45, 'interest_rate': 0.03}]\n"
+      "[1020.0, 2020.0, 515.0]\n",
+      "[{'balance': 1020.0, 'interest_rate': 0.02}, {'balance': 2020.0, 'interest_rate': 0.01}, {'balance': 515.0, 'interest_rate': 0.03}]\n"
      ]
     }
    ],
@@ -340,10 +340,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 130,
    "id": "da2264b5-298e-4b45-99df-852b94e90d15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'balance': 1000, 'withdrawals': [100, 50, 200], 'remaining_balance': 650},\n",
+       " {'balance': 2000, 'withdrawals': [300, 100], 'remaining_balance': 1600},\n",
+       " {'balance': 500, 'withdrawals': [50, 100, 75], 'remaining_balance': 275}]"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "accounts = [\n",
     "    {'balance': 1000, 'withdrawals': [100, 50, 200]},\n",
@@ -351,16 +364,45 @@
     "    {'balance': 500, 'withdrawals': [50, 100, 75]},\n",
     "]\n",
     "\n",
-    "# your code goes here\n",
+    "\n",
+    "\n",
+    "\n",
+    "for account in accounts:\n",
+    "    account['remaining_balance']=account['balance']-sum(account['withdrawals'])\n",
+    "    \n",
+    "accounts\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "12b035ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[650, 1600, 275]"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "def calculate_balance(account):\n",
     "    account['remaining_balance']=account['balance']-sum(account['withdrawals'])\n",
-    "    \n"
+    "    \n",
+    "new_accounts=list(map(lambda account: account['balance']-sum(account['withdrawals']), accounts))\n",
+    "new_accounts\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a67f4b45",
+   "id": "0335940c",
    "metadata": {},
    "outputs": [],
    "source": []
