--- a/quest/main.ipynb
+++ b/quest/main.ipynb
@@ -27,9 +27,6 @@
      "text": [
       "You wake up on a couch and find yourself in a strange house with no windows which you have never been to before. You don't remember why you are here and what had happened before. You feel some unknown danger is approaching and you must get out of the house, NOW!\n",
       "You are now in game room\n",
-      "What would you like to do? Type 'explore' or 'examine'?explore\n",
-      "You explore the room. This is game room. You find couch, piano, door a\n",
-      "You are now in game room\n",
       "What would you like to do? Type 'explore' or 'examine'?examine\n",
       "What would you like to examine?piano\n",
       "You examine piano. You find key for door a.\n",
@@ -44,12 +41,19 @@
     }
    ],
    "source": [
-    "import functions_dict as f\n",
+    "import functions as f\n",
     "\n",
     "f.game_state = INIT_GAME_STATE.copy()\n",
     "\n",
     "f.start_game()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
