finilized lab for error handling

--- a/labs/lab-python-error-handling.ipynb
+++ b/labs/lab-python-error-handling.ipynb
@@ -75,14 +75,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "975a49f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the quantity of t-shirts available: 0\n",
+      "Enter the quantity of mugs available: 0\n",
+      "Enter the quantity of hats available: 0\n",
+      "Enter the quantity of books available: 1\n",
+      "Enter the quantity of keychains available: 1\n",
+      "enter the number of customer orders:1\n",
+      "what product do they want to buy?hat\n",
+      "the product is not available, enter valid input\n",
+      "what product do they want to buy?dsf\n",
+      "the product is not available, enter valid input\n",
+      "what product do they want to buy?book\n",
+      "\n",
+      "Order Statistics:\n",
+      "Total products Ordered: 1\n",
+      "Percentage of Products Ordered: 100.0\n",
+      "\n",
+      "Updated inventory:\n",
+      "t-shirt: 0\n",
+      "mug: 0\n",
+      "hat: 0\n",
+      "book: 0\n",
+      "keychain: 1\n",
+      "\n",
+      "what is the price of the book)?5\n",
+      "\n",
+      "total order price: 5\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1 - copied all code from the prev work for update\n",
+    "copied all code from the prev work for update\n",
+    "\n",
+    "\n",
     "products=[\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
-    "w=1\n",
+    "\n",
     "#step 1 OPTIMIZED\n",
     "def initialize_inventory(products):\n",
     "    inventory = {}\n",
@@ -99,8 +134,8 @@
     "        inventory[product] = quantity\n",
     "    return inventory\n",
     "\n",
-    "#step 2 ERROR HANDLING\n",
-    "def get_customer_orders(inventory):\n",
+    "#step 2 ERROR HANDLING CHANGE\n",
+    "def get_customer_orders():\n",
     "    customer_orders=set()\n",
     "    i=0\n",
     "    while i<1:\n",
@@ -110,32 +145,28 @@
     "            print(\"NUMBERS ONLY\")\n",
     "        else:\n",
     "            if x>=0:\n",
-    "                return x\n",
     "                i+=1\n",
     "            else:\n",
     "                print(\"negative?? really?? try again!\")\n",
-    "    i=0\n",
-    "    while i<x:\n",
+    "    j=0\n",
+    "    while j<x:\n",
     "        choice=input(f\"what product do they want to buy?\")\n",
-    "        if choice in products:\n",
-    "            customer_orders.add(choice)\n",
-    "            i+=1\n",
-    "        elif choise not in products or inventory[choice]==0:\n",
+    "        if choice not in products or inventory[choice]==0:\n",
     "            print(\"the product is not available, enter valid input\")\n",
+    "        else:\n",
+    "            customer_orders.add(choice)\n",
+    "            j+=1\n",
     "    return customer_orders\n",
     "\n",
     "#step 3\n",
     "\n",
     "def update_inventory(customer_orders, inventory):\n",
-    "    for product in products:\n",
+    "    for product in inventory.keys():\n",
     "        if product in customer_orders:\n",
-    "            inventory[product]=inventory[product]-1\n",
+    "            inventory[product]-= 1\n",
     "        else:\n",
-    "            inventory\n",
-    "    \n",
-    "    #inventory={product:(inventory[product]-1 if product in customer_orders else inventory[product])\n",
-    "    #          for product in products\n",
-    "    # }\n",
+    "            inventory[product]\n",
+    "\n",
     "    return inventory\n",
     "\n",
     "#step 4 \n",
@@ -161,7 +192,7 @@
     "    for product in products:\n",
     "        print(f\"{product}:\",inventory[product])\n",
     "\n",
-    "#CHANGED FOR ERRORS\n",
+    "#step 7 - ERROR HANDLING CHANGE\n",
     "def calculate_total_price(customer_orders):\n",
     "    product_price={}\n",
     "    for product in customer_orders:\n",
@@ -189,9 +220,7 @@
     "    \n",
     "\n",
     "inventory=initialize_inventory(products)\n",
-    "\n",
-    "customer_orders=get_customer_orders(inventory)\n",
-    "\n",
+    "customer_orders=get_customer_orders()\n",
     "inventory=update_inventory(customer_orders, inventory)\n",
     "\n",
     "order_statistics=calculate_order_statistics(customer_orders,products)\n",
