--- a/labs/lab-dw-pandas.ipynb
+++ b/labs/lab-dw-pandas.ipynb
@@ -82,19 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "dd4e8cd8-a6f6-486c-a5c4-1745b0c035f4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([nan, 'F', 'M', 'Femal', 'Male', 'female'], dtype=object)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4008, 11)\n"
+     ]
     }
    ],
    "source": [
@@ -108,10 +105,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7442923d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Customer                      object\n",
+      "ST                            object\n",
+      "GENDER                        object\n",
+      "Education                     object\n",
+      "Customer Lifetime Value       object\n",
+      "Income                       float64\n",
+      "Monthly Premium Auto         float64\n",
+      "Number of Open Complaints     object\n",
+      "Policy Type                   object\n",
+      "Vehicle Class                 object\n",
+      "Total Claim Amount           float64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "#2\n",
     "print(insurance_df.dtypes)\n",
@@ -121,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "14d5df35",
    "metadata": {
     "scrolled": true
@@ -144,142 +160,6 @@
       "Total Claim Amount            761\n",
       "dtype: int64\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Customer</th>\n",
-       "      <th>ST</th>\n",
-       "      <th>GENDER</th>\n",
-       "      <th>Education</th>\n",
-       "      <th>Customer Lifetime Value</th>\n",
-       "      <th>Income</th>\n",
-       "      <th>Monthly Premium Auto</th>\n",
-       "      <th>Number of Open Complaints</th>\n",
-       "      <th>Policy Type</th>\n",
-       "      <th>Vehicle Class</th>\n",
-       "      <th>Total Claim Amount</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>RB50392</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Master</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>1/0/00</td>\n",
-       "      <td>Personal Auto</td>\n",
-       "      <td>Four-Door Car</td>\n",
-       "      <td>2.704934</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>QZ44356</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Bachelor</td>\n",
-       "      <td>697953.59%</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>94.0</td>\n",
-       "      <td>1/0/00</td>\n",
-       "      <td>Personal Auto</td>\n",
-       "      <td>Four-Door Car</td>\n",
-       "      <td>1131.464935</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AI49188</td>\n",
-       "      <td>Nevada</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Bachelor</td>\n",
-       "      <td>1288743.17%</td>\n",
-       "      <td>48767.0</td>\n",
-       "      <td>108.0</td>\n",
-       "      <td>1/0/00</td>\n",
-       "      <td>Personal Auto</td>\n",
-       "      <td>Two-Door Car</td>\n",
-       "      <td>566.472247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>WW63253</td>\n",
-       "      <td>California</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Bachelor</td>\n",
-       "      <td>764586.18%</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>106.0</td>\n",
-       "      <td>1/0/00</td>\n",
-       "      <td>Corporate Auto</td>\n",
-       "      <td>SUV</td>\n",
-       "      <td>529.881344</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>GA49547</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>M</td>\n",
-       "      <td>High School or Below</td>\n",
-       "      <td>536307.65%</td>\n",
-       "      <td>36357.0</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>1/0/00</td>\n",
-       "      <td>Personal Auto</td>\n",
-       "      <td>Four-Door Car</td>\n",
-       "      <td>17.269323</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Customer          ST GENDER             Education Customer Lifetime Value  \\\n",
-       "0  RB50392  Washington    NaN                Master                     NaN   \n",
-       "1  QZ44356     Arizona      F              Bachelor              697953.59%   \n",
-       "2  AI49188      Nevada      F              Bachelor             1288743.17%   \n",
-       "3  WW63253  California      M              Bachelor              764586.18%   \n",
-       "4  GA49547  Washington      M  High School or Below              536307.65%   \n",
-       "\n",
-       "    Income  Monthly Premium Auto Number of Open Complaints     Policy Type  \\\n",
-       "0      0.0                1000.0                    1/0/00   Personal Auto   \n",
-       "1      0.0                  94.0                    1/0/00   Personal Auto   \n",
-       "2  48767.0                 108.0                    1/0/00   Personal Auto   \n",
-       "3      0.0                 106.0                    1/0/00  Corporate Auto   \n",
-       "4  36357.0                  68.0                    1/0/00   Personal Auto   \n",
-       "\n",
-       "   Vehicle Class  Total Claim Amount  \n",
-       "0  Four-Door Car            2.704934  \n",
-       "1  Four-Door Car         1131.464935  \n",
-       "2   Two-Door Car          566.472247  \n",
-       "3            SUV          529.881344  \n",
-       "4  Four-Door Car           17.269323  "
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -289,7 +169,7 @@
     "#number of open complaints looks weird\n",
     "#a lot of incomes missing \n",
     "#Education should be standartized too\n",
-    "#LTV is a % - that's a problem\n"
+    "#LTV is a % - that's a problem"
    ]
   },
   {
@@ -431,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "id": "2dca5073-4520-4f42-9390-4b92733284ed",
    "metadata": {},
    "outputs": [
@@ -520,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "0c0563cf-6f8b-463d-a321-651a972f82e5",
    "metadata": {},
    "outputs": [
@@ -543,15 +423,15 @@
     "\n",
     "if PA_av_inc>CA_av_inc:\n",
     "    print(\"income of customers with 'Personal Auto' policy type is higher that those with 'Corporate Auto'\")\n",
-    "    print(\"mean for income for Perosnal Auto Policy type:\",PA_av_inc)\n",
-    "    print(\"mean for income for Corporate Auto Policy type:\", CA_av_inc)\n",
+    "\n",
     "elif CA_av_inc>PA_av_inc:\n",
     "    print(\"income of customers with 'Corporate Auto' policy type is higher that those with 'Personal Auto'\")\n",
-    "    print(\"mean for income for Perosnal Auto Policy type:\",PA_av_inc)\n",
-    "    print(\"mean for income for Corporate Auto Policy type:\", CA_av_inc)\n",
+    "\n",
     "else:\n",
     "    print(\"income of customers with 'Corporate Auto' policy type is the same as for those with 'Personal Auto'\")\n",
-    "    print(\"mean for income:\",PA_av_inc)  \n"
+    "     \n",
+    "print(\"mean for income for Perosnal Auto Policy type:\",PA_av_inc)\n",
+    "print(\"mean for income for Corporate Auto Policy type:\", CA_av_inc)"
    ]
   },
   {
