--- a/labs/lab-dw-data-cleaning-and-formatting.ipynb
+++ b/labs/lab-dw-data-cleaning-and-formatting.ipynb
@@ -57,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "3a7beb32",
+   "execution_count": 165,
+   "id": "e5443413",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "[4008 rows x 11 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 166,
    "id": "5810735c-8056-4442-bbf2-dda38d3e284a",
    "metadata": {
     "id": "5810735c-8056-4442-bbf2-dda38d3e284a"
@@ -338,8 +338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "f9fc3bca",
+   "execution_count": 167,
+   "id": "58390a06",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
        "[4008 rows x 11 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 168,
    "id": "3f8ee5cb-50ab-48af-8a9f-9a389804033c",
    "metadata": {
     "id": "3f8ee5cb-50ab-48af-8a9f-9a389804033c"
@@ -644,7 +644,7 @@
        "array([nan, 'F', 'M'], dtype=object)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,8 +664,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "b8f985b5",
+   "execution_count": 169,
+   "id": "ef8110d7",
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
        "       'AZ', 'WA', nan], dtype=object)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,8 +686,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "d7d971fa",
+   "execution_count": 170,
+   "id": "3a2c8332",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,8 +705,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "a5ae81c2",
+   "execution_count": 171,
+   "id": "bcaeba00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,8 +715,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "68ef7d95",
+   "execution_count": 172,
+   "id": "c00bc52f",
    "metadata": {
     "scrolled": false
    },
@@ -727,8 +727,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "2b0dc536",
+   "execution_count": 173,
+   "id": "6ad18c00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 174,
    "id": "eb8f5991-73e9-405f-bf1c-6b7c589379a9",
    "metadata": {
     "id": "eb8f5991-73e9-405f-bf1c-6b7c589379a9"
@@ -802,7 +802,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,8 +814,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "5bd323e1",
+   "execution_count": 175,
+   "id": "e130032e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,8 +824,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "9e32b83b",
+   "execution_count": 176,
+   "id": "7b972726",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,39 +869,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 201,
+   "id": "23f960b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new=df.dropna(subset=\"customer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "f3806941",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_19896\\2481691216.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_new[\"customer_lifetime_value\"]=df_new[\"customer_lifetime_value\"].fillna(df_new[\"customer_lifetime_value\"].median())\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_new[\"customer_lifetime_value\"]=df_new[\"customer_lifetime_value\"].fillna(df_new[\"customer_lifetime_value\"].median())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
    "id": "f184fc35-7831-4836-a0a5-e7f99e01b40e",
    "metadata": {
-    "id": "f184fc35-7831-4836-a0a5-e7f99e01b40e"
+    "id": "f184fc35-7831-4836-a0a5-e7f99e01b40e",
+    "scrolled": true
    },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_19896\\230490025.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_new[\"gender\"]=df_new[\"gender\"].fillna(gender_mode.item())\n"
+     ]
+    }
+   ],
+   "source": [
+    "gender_mode= df_new[\"gender\"].mode()\n",
+    "\n",
+    "df_new[\"gender\"]=df_new[\"gender\"].fillna(gender_mode.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "id": "83ecad36",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "customer                       0\n",
-       "state                          0\n",
-       "gender                       117\n",
-       "education                      0\n",
-       "customer_lifetime_value        3\n",
-       "income                         0\n",
-       "monthly_premium_auto           0\n",
-       "number_of_open_complaints      0\n",
-       "policy_type                    0\n",
-       "vehicle_class                  0\n",
-       "total_claim_amount             0\n",
-       "dtype: int64"
+       "'F'"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_new=df.dropna(subset=\"customer\")\n",
-    "\n",
-    "df_new.isnull().sum()\n",
-    "#deleting all rows that have NaN in cutomers, because they are pointless. Won't drop ones with no gander yet in case we want to analyse other parametres (like income or type of the car)"
+    "gender_mode.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "b9b9e7b6",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender\n",
+       "F    619\n",
+       "M    452\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_new[\"gender\"].value_counts()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "434efcee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "customer                     0\n",
+       "state                        0\n",
+       "gender                       0\n",
+       "education                    0\n",
+       "customer_lifetime_value      0\n",
+       "income                       0\n",
+       "monthly_premium_auto         0\n",
+       "number_of_open_complaints    0\n",
+       "policy_type                  0\n",
+       "vehicle_class                0\n",
+       "total_claim_amount           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_new.isnull().sum()"
    ]
   },
   {
