--- a/quest/startups/startups.ipynb
+++ b/quest/startups/startups.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "55f34e7c",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "61637f45",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
        "[646 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "ba27420d",
    "metadata": {
     "scrolled": false
@@ -260,7 +260,7 @@
        "max                140.000000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "0f7e07eb",
    "metadata": {},
    "outputs": [],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "abc6eb00",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "81b5390a",
    "metadata": {},
    "outputs": [
@@ -335,52 +335,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "3b3b2630",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>Valuation_US_billions</th>\n",
-       "      <th>Valuation_date</th>\n",
-       "      <th>Industry</th>\n",
-       "      <th>Country</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [name, Valuation_US_billions, Valuation_date, Industry, Country]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              name  Valuation_US_billions  Valuation_date  \\\n",
+      "372  Nature's Fynd                    0.0  JulyВ 2021[21]   \n",
+      "\n",
+      "                    Industry Country  \n",
+      "372  Consumer packaged goods      US  \n"
+     ]
     }
    ],
    "source": [
@@ -388,8 +356,8 @@
     "df_outliners_max=df1.loc[(df1['Valuation_US_billions'] > max_val)]\n",
     "df_outliners_max\n",
     "\n",
-    "df_outliners_min=df1.loc[(df1['Valuation_US_billions'] < min_val)]\n",
-    "df_outliners_min"
+    "df_outliners_min=df1.loc[(df1['Valuation_US_billions'] <1)]\n",
+    "print(df_outliners_min)"
    ]
   },
   {
