--- a/quest/startups/startups.ipynb
+++ b/quest/startups/startups.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "55f34e7c",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
        "[646 rows x 5 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7b24243d",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
        "[131 rows x 6 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,13 +351,13 @@
    "source": [
     "# uploading countries main\n",
     "\n",
-    "countries_main=pd.read_csv('https://raw.githubusercontent.com/okravtsova123/ironhack_study/main/quest/startups/tables/countries%20(1).csv',delimiter=';')\n",
+    "countries_main=pd.read_csv('https://raw.githubusercontent.com/okravtsova123/ironhack_study/main/quest/startups/tables/countries_main(GDP%20etc).csv',delimiter=';')\n",
     "countries_main"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e9c331b6",
    "metadata": {
     "scrolled": true
@@ -478,7 +478,7 @@
        "[131 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "6334571c",
    "metadata": {
     "scrolled": true
@@ -685,7 +685,7 @@
        "[131 rows x 8 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "0f7e07eb",
    "metadata": {},
    "outputs": [
@@ -1122,7 +1122,7 @@
        "[646 rows x 5 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "abc6eb00",
    "metadata": {},
    "outputs": [
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "81b5390a",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "3b3b2630",
    "metadata": {},
    "outputs": [
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "ca30cd8b",
    "metadata": {
     "scrolled": true
@@ -1373,7 +1373,7 @@
        "[612 rows x 5 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,6 +1395,179 @@
     "#saving CSV for SQL for further work\n",
     "path=\"C:\\\\Users\\\\user\\\\Desktop\\\\ironhack_study\\\\quest\\\\startups\\\\tables\\\\startups_cleaned.csv\"\n",
     "startups_cleaned.to_csv(path, index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "1f924ac4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>number</th>\n",
+       "      <th>name</th>\n",
+       "      <th>Valuation_US_billions</th>\n",
+       "      <th>Valuation_date</th>\n",
+       "      <th>Industry</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Size_group</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>rule_of_law</th>\n",
+       "      <th>GDP_blnUSD</th>\n",
+       "      <th>GDP_per_capita_tUSD</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Innovation Score</th>\n",
+       "      <th>Tax Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1Password</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>July 2021[84]</td>\n",
+       "      <td>Password manager</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>huge</td>\n",
+       "      <td>2022.0</td>\n",
+       "      <td>0.330643</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>41128771.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>58 Daojia</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>October 2015[124]</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>China</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>2022.0</td>\n",
+       "      <td>0.487371</td>\n",
+       "      <td>18.012</td>\n",
+       "      <td>6.337075</td>\n",
+       "      <td>2842321.0</td>\n",
+       "      <td>24.4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5ire</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>July 2022[570]</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>India</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>2022.0</td>\n",
+       "      <td>0.486329</td>\n",
+       "      <td>168.195</td>\n",
+       "      <td>3.745722</td>\n",
+       "      <td>44903225.0</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6sense</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>March 2021[266]</td>\n",
+       "      <td>Artificial intelligence</td>\n",
+       "      <td>US</td>\n",
+       "      <td>large</td>\n",
+       "      <td>2022.0</td>\n",
+       "      <td>0.426499</td>\n",
+       "      <td>74.953</td>\n",
+       "      <td>2.106073</td>\n",
+       "      <td>35588987.0</td>\n",
+       "      <td>13.9</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Acko</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>October 2021[418]</td>\n",
+       "      <td>Insurance</td>\n",
+       "      <td>India</td>\n",
+       "      <td>medium</td>\n",
+       "      <td>2022.0</td>\n",
+       "      <td>0.631118</td>\n",
+       "      <td>1.534</td>\n",
+       "      <td>16.360398</td>\n",
+       "      <td>93763.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   number       name  Valuation_US_billions     Valuation_date  \\\n",
+       "0       0  1Password                    6.8      July 2021[84]   \n",
+       "1       1  58 Daojia                    1.0  October 2015[124]   \n",
+       "2       2       5ire                    1.5     July 2022[570]   \n",
+       "3       3     6sense                    2.1    March 2021[266]   \n",
+       "4       4       Acko                    1.1  October 2021[418]   \n",
+       "\n",
+       "                  Industry Country Size_group    Year  rule_of_law  \\\n",
+       "0         Password manager  Canada       huge  2022.0     0.330643   \n",
+       "1                      NaN   China     medium  2022.0     0.487371   \n",
+       "2               Technology   India     medium  2022.0     0.486329   \n",
+       "3  Artificial intelligence      US      large  2022.0     0.426499   \n",
+       "4                Insurance   India     medium  2022.0     0.631118   \n",
+       "\n",
+       "   GDP_blnUSD  GDP_per_capita_tUSD  Population  Innovation Score  Tax Score  \n",
+       "0       0.000             0.000000  41128771.0               0.0        0.0  \n",
+       "1      18.012             6.337075   2842321.0              24.4        0.0  \n",
+       "2     168.195             3.745722  44903225.0              16.7        0.0  \n",
+       "3      74.953             2.106073  35588987.0              13.9        0.0  \n",
+       "4       1.534            16.360398     93763.0               0.0        0.0  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#checning the correlation between factors\n",
+    "startups_gr=pd.read_csv('https://raw.githubusercontent.com/okravtsova123/ironhack_study/main/quest/startups/tables/startups_with%20size_group_12.csv')\n",
+    "startups_gr\n",
+    "\n",
+    "#concatingating with other table\n",
+    "full_table=pd.concat([startups_gr, countries_main.iloc[:, 1:]], axis=1)\n",
+    "full_table\n",
+    "\n",
+    "full_table.head()"
    ]
   }
  ],
